--- a/index.html
+++ b/index.html
@@ -5,51 +5,73 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-
 	<header>
-			<a href="index.html">
-				<img src="img/logo-device.svg" alt="Логотип Device" width="163px" height="35px">
+			<a href="index.html" aria-label="На главную страницу">
+				<img src="img/logo-device.svg" alt="Логотип компании Device" width="163px" height="35px">
 			</a>
 
-			<form action="">
-				<input placeholder="Поиск по сайту" type="search">
-				<button type="submit">Поиск</button>
+			<form action="echo.htmlacademy.ru" method="get" aria-label="Поисковая строка">
+					<input type="search" placeholder="Поиск по сайту" aria-label="Поле для поиска">
+					<input type="submit" value="Поиск" aria-label="Поиск">
 			</form>
 			
-				<a href="">
+			<div>
+				<a href="#" aria-label="Войти в личный кабинет">
 					Войти
 				</a>
+			</div>
 
-				<a href="">
+			<div>
+				<a href="#" aria-label="Сравнить товары">
 					Сравнить
 				</a>
+			</div>
 
-				<a href="">
+			<div>
+				<a href="#" aria-label="Корзина">
 					Корзина
 				</a>
+			</div>
 		<nav>
 			<ul>
-
 				<li>
-					<a href="catalog.html">
-						Каталог товаров
+					<a href="#" aria-label="Каталог товаров">
+						Каталог товаров	
 					</a>
+
+					<table class="visually-hidden">
+						<tr>
+							<td><a href="#" aria-label="Виртуальная реальность">Виртуальная реальность</a></td>
+							<td><a href="#" aria-label="Фитнес-браслеты">Фитнес-браслеты</a></td>
+							<td><a href="#" aria-label="Квадрокоптер">Квадрокоптер</a></td>
+						</tr>
+						<tr>
+							<td><a href="#" aria-label="Моноподы для селфи">Моноподы для селфи</a></td>
+							<td><a href="#" aria-label="Умные часы">Умные часы</a></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><a href="#" aria-label="Экшн камеры">Экшн камеры</a></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</table>		
 				</li>
 
 				<li>
-					<a href="delivery.html">
+					<a href="#" aria-label="Доставка">
 						Доставка
 					</a>
 				</li>
 
 				<li>
-					<a href="warranty.html">
+					<a href="#" aria-label="Гарантия">
 						Гарантия
 					</a>
 				</li>
 
 				<li>
-					<a href="contacts.html">
+					<a href="#" aria-label="Контакты">
 						Контакты
 					</a>
 				</li>
@@ -58,7 +80,7 @@
 	</header>
 
 	<main>
-		<h1>
+		<h1 class="visually-hidden">
 			Интернет-магазин Device
 		</h1>
 
@@ -75,7 +97,7 @@
 				Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
 			</p>
 
-			<a href="#!">
+			<a href="#" aria-label="Подробнее">
 				Подробнее
 			</a>
 
@@ -98,36 +120,37 @@
 		<div>
 			<ul>
 				<li>
-					<a href="#!">
+					<a href="#" aria-label="Виртуальная реальность">
 						Виртуальная реальность
 					</a>
 				</li>
 
 				<li>
-					<a href="#!">
+					<a href="#" aria-label="Моноподы для селфи">
 						Моноподы для селфи
+					</a>
 				</li>
 
 				<li>
-					<a href="#!">
+					<a href="#" aria-label="Экшн-камеры">
 						Экшн-камеры
 					</a>					
 				</li>
 
 				<li>
-					<a href="#!">
+					<a href="#" aria-label="Фитнес-браслеты">
 						Фитнес-браслеты
 					</a>
 				</li>
 
 				<li>
-					<a href="#!">
+					<a href="#" aria-label="Умные часы">
 						Умные часы
 					</a>
 				</li>
 
 				<li>
-					<a href="#!">
+					<a href="#" aria-label="Квадрокоптеры">
 						Квадрокоптеры
 					</a>
 				</li>
@@ -136,13 +159,13 @@
 
 		<section>
 			<ul>
-				<li><button>Доставка</button></li>
-				<li><button>Гарантия</button></li>
-				<li><button>Кредит</button></li>
+				<li><button class="delivery" aria-label="Доставка">Доставка</button></li>
+				<li><button class="warranty" aria-label="Гарантия">Гарантия</button></li>
+				<li><button class="credit" aria-label="Кредит">Кредит</button></li>
 			</ul>
 
 			<ul>
-				<li>
+				<li for="delivery">
 					<h2>
 						Доставка
 					</h2>
@@ -153,7 +176,7 @@
 						заработаем, поднимая его на ваш этаж.							
 					</p>
 				</li>
-				<li>
+				<li for="warranty">
 					<h2>
 						Гарантия
 					</h2>
@@ -165,7 +188,7 @@
 					</p>					
 				</li>
 
-				<li>
+				<li for="credit">
 					<h2>
 						Кредит
 					</h2>
@@ -182,25 +205,25 @@
 		<div>
 			<ul>
 				<li>
-					<a href="#!">
+					<a href="#" aria-label="Компания DJI">
 						<img src="img/dji-logo.svg" alt="DJI Логотип" width="260px" height="100px">
 					</a>
 				</li>
 
 				<li>
-					<a href="#!">
+					<a href="#" aria-label="Компания Sp Gadjets">
 						<img src="img/spgadjects-logo.svg" alt="SpGadjets Логотип" width="260px" height="100px">
 					</a>
 				</li>
 
 				<li>
-					<a href="#!">
+					<a href="#" aria-label="Компания Go pro">
 						<img src="img/gopro-logo.svg" alt="GoPro Логотип" width="260px" height="100px">
 					</a>
 				</li>
 
 				<li>
-					<a href="#!">
+					<a href="#" aria-label="Компания Vive">
 						<img src="img/vive-logo.svg" alt="Vive Логотип" width="260px" height="100px">
 					</a>
 				</li>
@@ -228,7 +251,7 @@
 				<li>ЖелДорЭкспедиция</li>
 			</ul>
 
-			<a href="#!">
+			<a href="#" aria-label="Подробнее о нас">
 				Подробнее о нас
 			</a>
 		</section>
@@ -243,21 +266,48 @@
 				проверить работоспособность покупки. Всякое бывает.
 			</p>
 
-			<a href="#!">
+			<a href="#" aria-label="Посмотреть большую карту">
 				<img src="img/map.png" alt="Карта офиса ул. Строителей 15" width="560px" height="222px">
 			</a>
 
-			<a href="#!">
+			<div class="visually-hidden">
+				<img src="img/map-big.jpg" alt="Большая карта">
+				<button aria-label="Закрыть">Закрыть</button>	
+			</div>
+
+			<a href="#" aria-label="Напишите нам">
 				Напишите нам
 			</a>
+			
+			<div class="visually-hidden">
+				<form action="echo.htmlacademy.ru" method="post">
+					<label>
+						Ваше имя:
+						<input type="text" placeholder="Имя Фамилия" autofocus>
+					</label>
 
+					<label>
+						Ваш e-mail:
+						<input type="e-mail" placeholder="email@example.com" required>
+					</label>
+
+					<label for="comment-in-form">
+						Текст письма
+					</label>
+					<textarea name="comment-in-form" id="comment-in-form" cols="30" rows="5" placeholder="В свободной форме"></textarea>
+
+					<input type="submit" name="send-form" value="Отправить" aria-label="Отправить">
+
+					<button name="close-form" value="close-form" aria-label="Закрыть">Закрыть</button>
+				</form>
+			</div>
 		</section>
 	</main>
 
 	<footer>
 		<div>
-			<a href="index.html">
-				<img src="img/logo-device.svg" alt="Логотип Device" width="163px" height="35px">
+			<a href="index.html" aria-label="На главную страницу">
+				<img src="img/logo-device.svg" alt="Логотип компании Device" width="163px" height="35px">
 			</a>
 
 			<address>
@@ -268,19 +318,19 @@
 		<div>
 			<ul>
 				<li>
-					<a href="delivery.html">
+					<a href="#" aria-label="Доставка">
 						Доставка		
 					</a>
 				</li>
 
 				<li>
-					<a href="warranty.html">
+					<a href="#" aria-label="Гарантия">
 						Гарантия
 					</a>
 				</li>
 
 				<li>
-					<a href="contacts.html">
+					<a href="#" aria-label="Контакты">
 						Контакты
 					</a>
 				</li>
@@ -288,19 +338,19 @@
 
 			<ul>
 				<li>
-					<a href="#!">
+					<a href="#" aria-label="Facebook">
 						Facebook
 					</a>
 				</li>
 
 				<li>
-					<a href="#!">
+					<a href="#" aria-label="Instagram">
 						Instagram
 					</a>
 				</li>
 
 				<li>
-					<a href="#!">
+					<a href="#" aria-label="Twitter">
 						Twitter
 					</a>
 				</li>
@@ -308,24 +358,24 @@
 		</div>
 
 		<div>
-			<a href="">
+			<a href="#" aria-label="Войти в личный кабинет">
 				Войти
 			</a>
 
-			<a href="">
+			<a href="#" aria-label="Сравнить товары">
 				Сравнить
 			</a>	
 
-			<a href="">
+			<a href="#" aria-label="Корзина">
 				Корзина
 			</a>
 
-			<a href="tel:+74954959595">
+			<a href="tel:+74954959595" aria-label="Позвонить нам">
 				+7 (495) 495-95-95
 			</a>
 
-			<a href="https://htmlacademy.ru/intensive/htmlcss">
-				<img src="img/logo-html.svg" alt="Перейти на сайт Академии" width="27px" height="34px">
+			<a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Курсы от Html Academy">
+				<img src="img/logo-html.svg" alt="Логотип Html Academy" width="27px" height="34px">
 			</a>
 		</div>
 	</footer>
